--- a/公路车.md
+++ b/公路车.md
@@ -1,23 +1,37 @@
-# 0起步，入门车
+# 0 起步，入门车
+
 ## 美利达
+
 车轻，二手车走起
-- [ ] 美利达 幻影 16速 R2000(CLARIS) 2298 
-- [x] 美利达 幻影2 16速 R2000(CLARIS) 2498
-- [ ] 美利达 Ride 902 14速 shimano tourney 1989 手变
-- [ ] 美利达 Ride 903 14速 shimano CLARIS 2148
-- [ ] 美利达 斯特拉 92 16速 R2000(CLARIS) 2298
-- [x] 美利达 斯特拉 93 16速 R2000(CLARIS) 2498
-- [x] 美利达 斯特拉 94 18速 3298
-- [x] 美利达 斯特拉 95 16速 R3000(SORA) 2898
+
+- [ ] 美利达 幻影 16 速 R2000(CLARIS) 2298
+- [x] 美利达 幻影 2 16 速 R2000(CLARIS) 2498
+- [ ] 美利达 Ride 902 14 速 shimano tourney 1989 手变
+- [ ] 美利达 Ride 903 14 速 shimano CLARIS 2148
+- [ ] 美利达 流浪者 16 速 sora3300 09 年 4980
+- [ ] 美利达 飞度 20 速 TIAGRA 4600 09 年 4980
+- [ ] 美利达 斯特拉 92 16 速 R2000(CLARIS) 2298
+- [x] 美利达 斯特拉 93 16 速 R2000(CLARIS) 2498
+- [x] 美利达 斯特拉 94 18 速 3298
+- [x] 美利达 斯特拉 95 16 速 R3000(SORA) 2898
+
 ## 迪卡侬
+
 门店多，方便车维护，好像挺贵的
-- [ ] 迪卡侬 rc 100 14速 1699 前叉钢
-- [x] 迪卡侬 rc 120 16速 2999
+
+- [ ] 迪卡侬 rc 100 14 速 1699 前叉钢
+- [x] 迪卡侬 rc 120 16 速 2999
+
 ## 喜德盛
+
 周边没有实体店，暂不考虑
-- [ ] 喜德盛 RC 200 14速 1449
-- [ ] 喜德盛 RC 300 14速 shimano tourney 1899
+
+- [ ] 喜德盛 RC 200 14 速 1449
+- [ ] 喜德盛 RC 300 14 速 shimano tourney 1899
+
 ## 捷安特
+
 入门车性价比一般，车还沉，暂不考虑
-- [ ] 捷安特 Speeder 14速 shimano tourney 2498
-- [ ] 捷安特 Speeder D 16速 shimano CLARIS 2998
+
+- [ ] 捷安特 Speeder 14 速 shimano tourney 2498
+- [ ] 捷安特 Speeder D 16 速 shimano CLARIS 2998
