更新推荐文章

--- a/公路车.md
+++ b/公路车.md
@@ -4,16 +4,31 @@
 
 车轻，二手车走起
 
-- [ ] 美利达 幻影 16 速 R2000(CLARIS) 2298
-- [x] 美利达 幻影 2 16 速 R2000(CLARIS) 2498
-- [ ] 美利达 Ride 902 14 速 shimano tourney 1989 手变
-- [ ] 美利达 Ride 903 14 速 shimano CLARIS 2148
-- [ ] 美利达 流浪者 16 速 sora3300 09 年 4980
-- [ ] 美利达 飞度 20 速 TIAGRA 4600 09 年 4980
-- [ ] 美利达 斯特拉 92 16 速 R2000(CLARIS) 2298
-- [x] 美利达 斯特拉 93 16 速 R2000(CLARIS) 2498
-- [x] 美利达 斯特拉 94 18 速 3298
-- [x] 美利达 斯特拉 95 16 速 R3000(SORA) 2898
+- [ ] 美利达 幻影 16 速 R2000(CLARIS)
+      咸鱼 通州-48 1450
+- [x] 美利达 幻影 2 16 速 R2000(CLARIS)
+      咸鱼 顺义-50 2000/大兴-48 2050
+
+- [ ] 美利达 Ride 902 14 速 shimano tourney 手变
+      咸鱼 海淀-50 1399/顺义-50 1200
+- [ ] 美利达 Ride 903 14 速 shimano CLARIS
+      咸鱼 房山-46 1200/昌平-48 1300/顺义-48 1500
+- [ ] 美利达 Ride 905 16 速 shimano CLARIS
+      咸鱼 海淀-52 2300
+
+- [ ] 美利达 流浪者 16 速 sora3300 09 年
+      咸鱼 西城-52 1200/海淀 1250
+- [ ] 美利达 飞度 20 速 TIAGRA 4600 09 年
+      咸鱼 西城-52 1500
+
+- [ ] 美利达 斯特拉 92 16 速 R2000(CLARIS)
+      咸鱼 顺义-52 1300
+- [x] 美利达 斯特拉 93 16 速 R2000(CLARIS)
+      咸鱼 丰台-50 1600/海淀-47 1800/朝阳-44 2350
+- [x] 美利达 斯特拉 94 18 速
+      咸鱼 朝阳-50 2380
+- [x] 美利达 斯特拉 95 16 速 R3000(SORA)
+      咸鱼 海淀-47 3000/东城-47 2980
 
 ## 迪卡侬
 
