--- a/1.js/1.javascript/2-2.正则.md
+++ b/1.js/1.javascript/2-2.正则.md
@@ -5,17 +5,18 @@
 1. 使用一个正则表达式字面量
 
 ```js
-const regex = /^[a-zA-Z]+[0-9]*\W?_$/gi;
+const regex = /^[a-zA-Z]+[0-9]*\W?_$/gi
 ```
 
 2. 调用 RegExp 对象的构造函数
 
 ```js
-const regex = new RegExp(pattern, [, flags]);
+const regex = new RegExp(pattern, [, flags])
 ```
 
 ### 特殊字符
 
+```js
 - ^ 匹配输入的开始
 - \$ 匹配输入的结束
 - \* 0 次或多次 {0，}
@@ -46,6 +47,7 @@ const regex = new RegExp(pattern, [, flags]);
 - \b 词的边界
   - /\bm/匹配“moon”中得‘m’；
 - \B 非单词边界
+```
 
 ### 使用正则表达式的方法
 
@@ -61,21 +63,21 @@ const regex = new RegExp(pattern, [, flags]);
 匹配结尾的数字
 
 ```js
-/\d+$/g;
+;/\d+$/g
 ```
 
 统一空格个数
 字符串内如有空格，但是空格的数量可能不一致，通过正则将空格的个数统一变为一个。
 
 ```js
-let reg = /\s+/g;
-str.replace(reg, " ");
+let reg = /\s+/g
+str.replace(reg, ' ')
 ```
 
 判断字符串是不是由数字组成
 
 ```js
-str.test(/^\d+$/);
+str.test(/^\d+$/)
 ```
 
 电话号码正则
@@ -85,14 +87,14 @@ str.test(/^\d+$/);
 - 分机号码为 3-4 位的数字，非必填，但若填写则以“-”与电话号码相连接
 
 ```js
-/^\d{3,4}-\d{7,8}(-\d{3,4})?$/;
+;/^\d{3,4}-\d{7,8}(-\d{3,4})?$/
 ```
 
 手机号码正则表达式
 正则验证手机号，忽略前面的 0，支持 130-139，150-159。忽略前面 0 之后判断它是 11 位的。
 
 ```js
-/^0*1(3|5)\d{9}$/;
+;/^0*1(3|5)\d{9}$/
 ```
 
 使用正则表达式实现删除字符串中的空格
@@ -107,28 +109,28 @@ funtion trim(str) {
 限制文本框只能输入数字和两位小数点等等
 
 ```js
-/^\d*\.\d{0,2}$/;
+;/^\d*\.\d{0,2}$/
 ```
 
 只能输入小写的英文字母和小数点，和冒号，正反斜杠(：./\)
 
 ```js
-/^[a-z\.:\/\\]*$/;
+;/^[a-z\.:\/\\]*$/
 ```
 
 替换小数点前内容为指定内容
 例如：infomarket.php?id=197 替换为 test.php?id=197
 
 ```js
-var reg = /^[^\.]+/;
-var target = "---------";
-str = str.replace(reg, target);
+var reg = /^[^\.]+/
+var target = '---------'
+str = str.replace(reg, target)
 ```
 
 只匹配中文的正则表达式
 
 ```js
-/[\u4E00-\u9FA5\uf900-\ufa2d]/gi;
+;/[\u4E00-\u9FA5\uf900-\ufa2d]/gi
 ```
 
 返回字符串的中文字符个数
@@ -136,10 +138,10 @@ str = str.replace(reg, target);
 
 ```js
 function cLength(str) {
-  var reg = /[^\u4E00-\u9FA5\uf900-\ufa2d]/g;
-  //匹配非中文的正则表达式
-  var temp = str.replace(reg, "");
-  return temp.length;
+	var reg = /[^\u4E00-\u9FA5\uf900-\ufa2d]/g
+	//匹配非中文的正则表达式
+	var temp = str.replace(reg, '')
+	return temp.length
 }
 ```
 
@@ -148,8 +150,8 @@ function cLength(str) {
 
 ```js
 function getPreThrstr(str) {
-  let reg = /\.\d{1,3}$/;
-  return str.replace(reg, "");
+	let reg = /\.\d{1,3}$/
+	return str.replace(reg, '')
 }
 ```
 
@@ -166,10 +168,10 @@ c:\images\tupian\006.jpg
 
 ```js
 function getFileName(str) {
-  var reg = /[^\\\/]*[\\\/]+/g;
-  // xxx\ 或是 xxx/
-  str = str.replace(reg, "");
-  return str;
+	var reg = /[^\\\/]*[\\\/]+/g
+	// xxx\ 或是 xxx/
+	str = str.replace(reg, '')
+	return str
 }
 ```
 
@@ -177,15 +179,15 @@ function getFileName(str) {
 "http://23.123.22.12/image/somepic.gif"转换为："/image/somepic.gif"
 
 ```js
-var reg = /http:\/\/[^\/]+/;
-str = str.replace(reg, "");
+var reg = /http:\/\/[^\/]+/
+str = str.replace(reg, '')
 ```
 
 用户名正则
 用于用户名注册，，用户名只 能用 中文、英文、数字、下划线、4-16 个字符。
 
 ```js
-/^[\u4E00-\u9FA5\uf900-\ufa2d\w]{4,16}$/;
+;/^[\u4E00-\u9FA5\uf900-\ufa2d\w]{4,16}$/
 ```
 
 匹配英文地址
@@ -193,21 +195,21 @@ str = str.replace(reg, "");
 包含 "点", "字母","空格","逗号","数字"，但开头和结尾不能是除字母外任何字符。
 
 ```js
-/^[a-zA-Z][\.a-zA-Z,0-9]*[a-zA-Z]$/;
+;/^[a-zA-Z][\.a-zA-Z,0-9]*[a-zA-Z]$/
 ```
 
 正则匹配价格
 开头数字若干位，可能有一个小数点，小数点后面可以有两位数字。
 
 ```js
-/^\d+(\.\d{2})?$/;
+;/^\d+(\.\d{2})?$/
 ```
 
 身份证号码的匹配
 身份证号码可以是 15 位或者是 18 位，其中最后一位可以是 X。其它全是数字
 
 ```js
-/^(\d{14}|\d{17})(X|x)$/;
+;/^(\d{14}|\d{17})(X|x)$/
 ```
 
 单词首字母大写
@@ -215,9 +217,9 @@ str = str.replace(reg, "");
 
 ```js
 function firstCharUpper(str) {
-  str = str.toLowerCase();
-  let reg = /\b(\w)/g;
-  return str.replace(reg, (m) => m.toUpperCase());
+	str = str.toLowerCase()
+	let reg = /\b(\w)/g
+	return str.replace(reg, (m) => m.toUpperCase())
 }
 ```
 
@@ -226,7 +228,7 @@ yyyy-mm-dd 格式
 4 位数字，横线，1 或者 2 位数字，再横线，最后又是 1 或者 2 位数字。
 
 ```js
-/^\d{4}-\d{1,2}-\d{1,2}$/;
+;/^\d{4}-\d{1,2}-\d{1,2}$/
 ```
 
 去掉文件的后缀名
@@ -234,7 +236,7 @@ www.abc.com/dc/fda.asp 变为 www.abc.com/dc/fda
 
 ```js
 function removeExp(str) {
-  return str.replace(/\.\w$/, "");
+	return str.replace(/\.\w$/, '')
 }
 ```
 
@@ -243,45 +245,56 @@ function removeExp(str) {
 多个组合。
 
 ```js
-/^[\w-]+@\w+\.\w+$/;
+;/^[\w-]+@\w+\.\w+$/
 ```
 
 正则判断标签是否闭合
+
+```
 例如：<img xxx=”xxx” 就是没有闭合的标签；
 
 <p>p的内容，同样也是没闭合的标签。
 
 标签可能有两种方式闭合，<img xxx=”xxx” /> 或者是<p> xxx </p>。
+```
 
 ```js
-/<([a-z]+)(\s*\w*?\s*=\s*".+?")*(\s*?>[\s\S]*?(<\/\1>)+|\s*\/>)/i;
+;/<([a-z]+)(\s*\w*?\s*=\s*".+?")*(\s*?>[\s\S]*?(<\/\1>)+|\s*\/>)/i
 ```
 
 正则判断是否为数字与字母的混合
 不能小于 12 位，且必须为字母和数字的混
 
 ```js
-/^(([a-z]+[0-9]+)|([0-9]+[a-z]+))[a-z0-9]*$/i;
+;/^(([a-z]+[0-9]+)|([0-9]+[a-z]+))[a-z0-9]*$/i
 ```
 
 将阿拉伯数字替换为中文大写形式
 
 ```js
 function replaceReg(reg, str) {
-  let arr = ["零", "壹", "贰", "叁", "肆", "伍", "陆", "柒", "捌", "玖"];
-  let reg = /\d/g;
-  return str.replace(reg, function (m) {
-    return arr[m];
-  });
+	let arr = ['零', '壹', '贰', '叁', '肆', '伍', '陆', '柒', '捌', '玖']
+	let reg = /\d/g
+	return str.replace(reg, function (m) {
+		return arr[m]
+	})
 }
 ```
 
 去掉标签的所有属性
 
+```html
 <td style="width: 23px; height: 26px;" align="left">***</td>
+```
+
 变成没有任何属性的
+
+```html
 <td>***</td>
+```
+
 思路：非捕获匹配属性，捕获匹配标签，使用捕获结果替换掉字符串。正则如下：
+
 ```js
-/(<td)\s(?:\s*\w*?\s*=\s*".+?")*?\s*?(>)/
+;/(<td)\s(?:\s*\w*?\s*=\s*".+?")*?\s*?(>)/
 ```
