增加 Testing-library

--- a/1-javascript/javascript/1-4.作用域.md
+++ b/1-javascript/javascript/1-4.作用域.md
@@ -21,9 +21,6 @@
 ### 下面的代码打印什么内容，为什么？
 
 ```js
-// 情况 1
-
-//  情况 2
 var b = 10;
 var c = function b() {
   b = 20;
@@ -31,7 +28,7 @@ var c = function b() {
 }
 c()
 
-// 上面两种都打印：
+// 打印：
 ƒ b() {
   b = 20;
   console.log(b)
@@ -64,7 +61,7 @@ var b = 10
 var b = 10
 ;(function b() {
   b.b = 20
-  console.log(b)
+  console.log(window.b)
 })()
 ```
 
