--- a/1-javascript/javascript/1-9.ES6.md
+++ b/1-javascript/javascript/1-9.ES6.md
@@ -101,7 +101,7 @@ console.log(total) //6
 
 ```js
 const arr = [1, 2, 3]
-const sum = arr.reduce((acc, current) => acc + current, 0)
+const sum = arr.reduce((acc, current, index, source) => acc + current, 0)
 console.log(sum)
 ```
 
