--- a/个人爱好/公路车挑选.md
+++ b/个人爱好/公路车挑选.md
@@ -32,7 +32,7 @@
 
 ## 迪卡侬
 
-门店多，方便车维护，好像挺贵的
+门店多，车维护方便，没什么性价比
 
 - [ ] 迪卡侬 rc 100 14 速 1699 前叉钢
 - [x] 迪卡侬 rc 120 16 速 2999
@@ -46,7 +46,7 @@
 
 ## 捷安特
 
-入门车性价比一般，车还沉，暂不考虑
+入门车性价比一般，暂不考虑
 
 - [ ] 捷安特 Speeder 14 速 shimano tourney 2498
-- [ ] 捷安特 Speeder D 16 速 shimano CLARIS 2998
+- [ ] 捷安特 Speeder D 16 速 shimano CLARIS 2998 8.9kg
