--- a/个人爱好/公路车挑选.md
+++ b/个人爱好/公路车挑选.md
@@ -11,10 +11,13 @@
 
 - [ ] 美利达 Ride 902 14 速 shimano tourney 手变
       咸鱼 海淀-50 1399/顺义-50 1200
-- [ ] 美利达 Ride 903 14 速 shimano CLARIS
+- [ ] 美利达 Ride 903 14 速 shimano CLARIS 2013 年
       咸鱼 房山-46 1200/昌平-48 1300/顺义-48 1500
-- [ ] 美利达 Ride 905 16 速 shimano CLARIS
+- [ ] 美利达 Ride 905 16 速 shimano CLARIS 2015 年
       咸鱼 海淀-52 2300
+
+- [ ] 美利达 r903 14 速 shimano CLARIS 2017 年
+      咸鱼 东城-50 1550
 
 - [ ] 美利达 流浪者 16 速 sora3300 09 年
       咸鱼 西城-52 1200/海淀 1250
@@ -23,9 +26,9 @@
 
 - [ ] 美利达 斯特拉 92 16 速 R2000(CLARIS)
       咸鱼 顺义-52 1300
-- [x] 美利达 斯特拉 93 16 速 R2000(CLARIS)
+- [x] 美利达 斯特拉 93 16 速 R2000(CLARIS) 2020 年
       咸鱼 丰台-50 1600/海淀-47 1800/朝阳-44 2350
-- [x] 美利达 斯特拉 94 18 速
+- [x] 美利达 斯特拉 94 18 速 2022 年
       咸鱼 朝阳-50 2380
 - [x] 美利达 斯特拉 95 16 速 R3000(SORA)
       咸鱼 海淀-47 3000/东城-47 2980
