--- a/个人爱好/公路车挑选.md
+++ b/个人爱好/公路车挑选.md
@@ -20,7 +20,7 @@
 - [ ] 美利达 斯特拉 92 16 速 R2000(CLARIS)
       咸鱼 顺义-52 1300
 
-- [x] 美利达 幻影 2 16 速 R2000(CLARIS)
+- [x] 美利达 幻影 2 16 速 R2000(CLARIS) 2022 年
       咸鱼 顺义-50 2000/大兴-48 2050
 - [x] 美利达 r903 14 速 shimano CLARIS 2017 年
       咸鱼 东城-50 1550
