更新公路车

--- a/个人爱好/公路车挑选.md
+++ b/个人爱好/公路车挑选.md
@@ -1,8 +1,46 @@
 # 0 起步，入门车
 
+## 套件
+
+禧玛诺 R2000(CLARIS) 2*8s
+    - [小套 988](https://detail.tmall.com/item.htm?id=617683218687&skuId=4529348775488&areaId=110100)
+    <!-- - [手变 698](https://detail.tmall.com/item.htm?id=617683218687&skuId=4529348775487&areaId=110100) -->
+    <!-- - [前拨 132=988-698-158](https://detail.tmall.com/item.htm?id=617683218687&skuId=4529348775487&areaId=110100) -->
+    <!-- - [后拨 158](https://detail.tmall.com/item.htm?id=617683218687&skuId=4529348775490&areaId=110100) -->
+    - [曲柄 267](https://detail.tmall.hk/hk/item.htm?id=669743782254&skuId=4820110449602&areaId=110100)
+    - [飞轮 128](https://detail.tmall.com/item.htm?id=601270001270&skuId=4377915151470&areaId=110100)
+    - [夹器 198*2](https://detail.tmall.com/item.htm?id=610302722072&skuId=4427321172145&areaId=110100)
+    - 大套 1681
+禧玛诺 R3000(SORA) 2*9s
+    - [小套 1198](https://detail.tmall.com/item.htm?id=617683218687&skuId=4529348775488&areaId=110100)
+    <!-- - [手变 898](https://detail.tmall.com/item.htm?id=617683218687&skuId=4529348775487&areaId=110100) -->
+    - [曲柄 847](https://detail.tmall.hk/hk/item.htm?id=667902115510&skuId=4984614443807&areaId=110100)
+    - [飞轮 228](https://detail.tmall.com/item.htm?id=601270001270&skuId=4831712436377&areaId=110100)
+    - [夹器 298](https://detail.tmall.com/item.htm?id=610302722072&skuId=4427321172145&areaId=110100)
+    - 大套 2571
+禧玛诺 4700(TIAGRA) 2*10s 小套 1060 大套 2000
+    - 手变
+    - 前拨
+    - 后拨 398
+    - 曲柄
+    - 飞轮
+    - 夹器 493
+禧玛诺 105(R7000) 2*11s
+    - 手变 L465+
+    - 前拨
+    - 后拨 398
+    - 曲柄
+    - 飞轮
+    - [夹器 459](https://detail.tmall.hk/item.htm?id=667542946533&skuId=4811568249881)
+禧玛诺 M310 3*8s
+    - [小套 448](https://item.jd.com/10047143122196.html)
+    - [大套 860](https://item.jd.com/10047143122198.html)
+禧玛诺 M370 3*9s 小套 425 大套 560
+
 ## 美利达
 
 车轻，二手车走起
+2400手变1500以下，r2000手变1700左右
 
 - [ ] 美利达 魅影 16 速 sora3300 08 年
 - [ ] 美利达 流浪者 16 速 sora3300 09 年
@@ -11,20 +49,22 @@
       咸鱼 西城-52 1500
 - [ ] 美利达 幻影 16 速 R2000(CLARIS)
       咸鱼 通州-48 1450
-- [ ] 美利达 Ride 902 14 速 shimano tourney 手变
+- [ ] 美利达 Ride 902 14 速 shimano tourney 手变 2013 年
       咸鱼 海淀-50 1399/顺义-50 1200
 - [ ] 美利达 Ride 903 14 速 shimano CLARIS 2013 年
       咸鱼 房山-46 1200/昌平-48 1300/顺义-48 1500
 - [ ] 美利达 Ride 905 16 速 shimano CLARIS 2015 年
       咸鱼 海淀-52 2300
+- [ ] 美利达 r903 14 速 shimano CLARIS 2015 年
+      咸鱼 东城-50 1550
+- [ ] 美利达 R93 16 速 shimano CLARIS 2016 年（r903升级版）
 - [ ] 美利达 斯特拉 92 16 速 R2000(CLARIS)
       咸鱼 顺义-52 1300
 
 - [x] 美利达 幻影 2 16 速 R2000(CLARIS) 2022 年
       咸鱼 顺义-50 2000/大兴-48 2050
-- [x] 美利达 r903 14 速 shimano CLARIS 2017 年
-      咸鱼 东城-50 1550
-- [x] 美利达 斯特拉 93 16 速 R2000(CLARIS) 2020 年
+
+- [x] 美利达 斯特拉 93 16 速 R2000(CLARIS) 有螳螂须的，应该是18款以前的
       咸鱼 丰台-50 1600/海淀-47 1800/朝阳-44 2350
 - [x] 美利达 斯特拉 94 18 速 2022 年
       咸鱼 朝阳-50 2380
