--- a/个人爱好/猫粮.md
+++ b/个人爱好/猫粮.md
@@ -1,4 +1,10 @@
+# 猫粮
+
 | 品牌   | 重量          | 价格    | 渠道 |
 | ------ | ------------- | ------- | ---- |
+| 雪  山 | 12 磅(5.44kg) | 240(促) | 天猫 |
 | 金素力 | 12 磅(5.44kg) | 280(促) | 天猫 |
+| 绿福摩 | 12 磅(5.44kg) | 428(平) | 天猫 |
 | 纽翠斯 | 12 磅(5.44kg) | 449(平) | 天猫 |
+| 爱肯拿 | 12 磅(5.44kg) | 510(平) | 天猫 |
+| 渴  望 | 12 磅(5.44kg) | 550(平) | 天猫 |
