自行车配件

--- a/个人爱好/公路车挑选.md
+++ b/个人爱好/公路车挑选.md
@@ -1,5 +1,19 @@
 # 0 起步，入门车
 
+## 自行车配件
+
+- 头盔 85 √
+- 手机支架 10 √
+- 前灯
+- 尾灯 39 √
+- 码表：行者小G+ 1259 √
+- 码表架 109 √
+- 踏频/速度 75*29 √
+<!-- - 心率带 85 -->
+- 后车架 50
+- 后坐垫 8.8
+- 车筐 25
+
 ## 套件
 
 禧玛诺 R2000(CLARIS) 2*8s
