--- a/个人爱好/公路车挑选.md
+++ b/个人爱好/公路车挑选.md
@@ -3,12 +3,14 @@
 ## 自行车配件
 
 - 头盔 85 √
-- 手机支架 10 √
-- 前灯
-- 尾灯 39 √
-- 码表：行者小G+ 1259 √
-- 码表架 109 √
-- 踏频/速度 75*29 √
+<!-- - 手机支架 10  √ -->
+- 前灯 55 √
+- 尾灯 3 √
+- 码表：行者小G+ 125 √
+- 码表架 10 √
+- 毛巾、头巾 22.5 √
+- 排汗衫 37.5 √
+- 踏频/速度 75*2 √
 <!-- - 心率带 85 -->
 - 后车架 50
 - 后坐垫 8.8
@@ -92,16 +94,12 @@
 - [ ] 迪卡侬 rc 100 14 速 1699 前叉钢
 - [x] 迪卡侬 rc 120 16 速 2999
 
-## 喜德盛
-
-周边没有实体店，暂不考虑
-
-- [ ] 喜德盛 RC 200 14 速 1449
-- [ ] 喜德盛 RC 300 14 速 shimano tourney 1899
-
 ## 捷安特
 
 入门车性价比一般，暂不考虑
 
+- [ ] 捷安特 ocr 5300
+- [ ] 捷安特 ocr 5500
+- [ ] 捷安特 ocr 5700
 - [ ] 捷安特 Speeder 14 速 shimano tourney 2498
 - [ ] 捷安特 Speeder D 16 速 shimano CLARIS 2998 8.9kg
