--- a/个人爱好/公路车挑选.md
+++ b/个人爱好/公路车挑选.md
@@ -18,36 +18,15 @@
 
 ## 套件
 
+### 公路车
+
 禧玛诺 R2000(CLARIS) 2*8s
-    - [小套 988](https://detail.tmall.com/item.htm?id=617683218687&skuId=4529348775488&areaId=110100)
-    <!-- - [手变 698](https://detail.tmall.com/item.htm?id=617683218687&skuId=4529348775487&areaId=110100) -->
-    <!-- - [前拨 132=988-698-158](https://detail.tmall.com/item.htm?id=617683218687&skuId=4529348775487&areaId=110100) -->
-    <!-- - [后拨 158](https://detail.tmall.com/item.htm?id=617683218687&skuId=4529348775490&areaId=110100) -->
-    - [曲柄 267](https://detail.tmall.hk/hk/item.htm?id=669743782254&skuId=4820110449602&areaId=110100)
-    - [飞轮 128](https://detail.tmall.com/item.htm?id=601270001270&skuId=4377915151470&areaId=110100)
-    - [夹器 198*2](https://detail.tmall.com/item.htm?id=610302722072&skuId=4427321172145&areaId=110100)
-    - 大套 1681
 禧玛诺 R3000(SORA) 2*9s
-    - [小套 1198](https://detail.tmall.com/item.htm?id=617683218687&skuId=4529348775488&areaId=110100)
-    <!-- - [手变 898](https://detail.tmall.com/item.htm?id=617683218687&skuId=4529348775487&areaId=110100) -->
-    - [曲柄 847](https://detail.tmall.hk/hk/item.htm?id=667902115510&skuId=4984614443807&areaId=110100)
-    - [飞轮 228](https://detail.tmall.com/item.htm?id=601270001270&skuId=4831712436377&areaId=110100)
-    - [夹器 298](https://detail.tmall.com/item.htm?id=610302722072&skuId=4427321172145&areaId=110100)
-    - 大套 2571
 禧玛诺 4700(TIAGRA) 2*10s 小套 1060 大套 2000
-    - 手变
-    - 前拨
-    - 后拨 398
-    - 曲柄
-    - 飞轮
-    - 夹器 493
 禧玛诺 105(R7000) 2*11s
-    - 手变 L465+
-    - 前拨
-    - 后拨 398
-    - 曲柄
-    - 飞轮
-    - [夹器 459](https://detail.tmall.hk/item.htm?id=667542946533&skuId=4811568249881)
+
+### 山地车
+
 禧玛诺 M310 3*8s
     - [小套 448](https://item.jd.com/10047143122196.html)
     - [大套 860](https://item.jd.com/10047143122198.html)
