--- a/1-javascript/javascript/1-9.ES6.md
+++ b/1-javascript/javascript/1-9.ES6.md
@@ -1,5 +1,11 @@
 # ES6
 
+```js
+// 给function 设置默认值
+const getPublicUrl = packageJson => envPublicUrl || homepage;
+getPublicUrl(packageJson)
+```
+
 ### var、let 及 const 区别？
 
 - 全局申明的 var 变量会挂载在 window 上，而 let 和 const 不会
