--- a/1-javascript/javascript/2-8.事件.md
+++ b/1-javascript/javascript/2-8.事件.md
@@ -36,3 +36,8 @@ function cancelHandler(event) {
   return false //用于处理使用对象属性注册的处理程序
 }
 ```
+
+## onCompositionStart & onCompositionEnd
+
+在输入框内输入拼音的时候，在拼音上位输入时，会触发Input的onChange事件，输入完成后onCompositionEnd事件。
+
