--- a/1-javascript/javascript/1-9.ES6.md
+++ b/1-javascript/javascript/1-9.ES6.md
@@ -194,6 +194,10 @@ console.log(test())
 async 就是将函数返回值使用 Promise.resolve() 包裹了下，和 then 中处理返回值一样，并且 await 只能配套 async 使用。
 
 ```js
+const sleep = (ms) => {
+  return new Promise(resolve => setTimeout(resolve, ms))
+}
+
 async function test() {
   let value = await sleep()
 }
