--- a/个人爱好/公路车挑选.md
+++ b/个人爱好/公路车挑选.md
@@ -2,111 +2,107 @@
 
 ## 自行车配件
 
-- 头盔 85 √
-<!-- - 手机支架 10  √ -->
-- 前灯 55 √
-- 尾灯 3 √
-- 码表：行者小G+ 125 √
-- 码表架 10 √
-- 毛巾、头巾 22.5 √
-- 排汗衫 37.5 √
-- 踏频/速度 75*2 √
-<!-- - 心率带 85 -->
-- 后车架 50
-- 后坐垫 8.8
-- 车筐 25
+-   头盔
+-   前灯
+-   尾灯
+-   码表
+-   码表架
+-   毛巾、头巾
+-   排汗衫
+-   踏频/速度
+-   心率带
 
 ## 公路车
 
 > 变速越高，牙盘比变速越丝滑，骑行体验越好，并不是你骑的越快!!
 
-- 禧玛诺 TOURNEY(A070) 7s
-- 禧玛诺 CLARIS(R2000) 8s
-- 禧玛诺 SORA(R3000) 9s
-- 禧玛诺 TIAGRA(4700) 10s
-- 禧玛诺 105(R7000) 11s
-- 禧玛诺 105 Di2(R7170) 12s
-- 禧玛诺 ULTEGRA(R8170) 12s
-- 禧玛诺 DURA-AC(R9200) 12s
+-   禧玛诺 TOURNEY(A070) 7s
+-   禧玛诺 CLARIS(R2000) 8s
+-   禧玛诺 SORA(R3000) 9s
+-   禧玛诺 TIAGRA(4700) 10s
+-   禧玛诺 105(R7000) 11s
+-   禧玛诺 105 Di2(R7170) 12s
+-   禧玛诺 ULTEGRA(R8170) 12s
+-   禧玛诺 DURA-AC(R9200) 12s
 
 ### 美利达-公路
 
 车轻，二手车走起
 
-> 3000 入坑美利达百万, 铝架碳把，旧款105 = TIAGRA
+> 3000 入坑美利达百万, 铝架碳把，旧款 105 = TIAGRA
 
-- 美利达 魅影 8s sora3300 08 年
-- 美利达 流浪者 8s sora3300 09 年
+-   美利达 魅影 8s sora3300 08 年
+-   美利达 流浪者 8s sora3300 09 年
 
-      咸鱼 西城-52 1200/海淀 1250
+        咸鱼 西城-52 1200/海淀 1250
 
-- 美利达 飞度 20 速 TIAGRA 4600 09 年
+-   美利达 飞度 20 速 TIAGRA 4600 09 年
 
-      咸鱼 西城-52 1500
+        咸鱼 西城-52 1500
 
-- 美利达 幻影 8s R2000(CLARIS)
+-   美利达 幻影 8s R2000(CLARIS)
 
-      咸鱼 通州-48 1450
+        咸鱼 通州-48 1450
 
-- 美利达 Ride 902 7s shimano tourney 手变 2013 年
+-   美利达 Ride 902 7s shimano tourney 手变 2013 年
 
-      咸鱼 海淀-50 1399/顺义-50 1200
+        咸鱼 海淀-50 1399/顺义-50 1200
 
-- 美利达 Ride 903 7s shimano CLARIS 2013 年
+-   美利达 Ride 903 7s shimano CLARIS 2013 年
 
-      咸鱼 房山-46 1200/昌平-48 1300/顺义-48 1500
+        咸鱼 房山-46 1200/昌平-48 1300/顺义-48 1500
 
-- 美利达 Ride 905 8s shimano CLARIS 2015 年
+-   美利达 Ride 905 8s shimano CLARIS 2015 年
 
-      咸鱼 海淀-52 2300
+        咸鱼 海淀-52 2300
 
-- 美利达 r903 7s shimano CLARIS 2015 年
+-   美利达 r903 7s shimano CLARIS 2015 年
 
-      咸鱼 东城-50 1550
+        咸鱼 东城-50 1550
 
-- 美利达 R93 8s shimano CLARIS 2016 年（r903升级版）
-- 美利达 斯特拉 92 8s R2000(CLARIS)
+-   美利达 R93 8s shimano CLARIS 2016 年（r903 升级版）
+-   美利达 斯特拉 92 8s R2000(CLARIS)
 
-      咸鱼 顺义-52 1300
+        咸鱼 顺义-52 1300
 
-- 美利达 幻影 2 8s R2000(CLARIS) 2022 年
+-   美利达 幻影 2 8s R2000(CLARIS) 2022 年
 
-      咸鱼 顺义-50 2000/大兴-48 2050
+        咸鱼 顺义-50 2000/大兴-48 2050
 
-- 美利达 斯特拉 93 8s R2000(CLARIS) 有螳螂须的，应该是18款以前的
+-   美利达 斯特拉 93 8s R2000(CLARIS) 有螳螂须的，应该是 18 款以前的
 
-      咸鱼 丰台-50 1600/海淀-47 1800/朝阳-44 2350
+        咸鱼 丰台-50 1600/海淀-47 1800/朝阳-44 2350
 
-- 美利达 斯特拉 94 9s 2022 年
+-   美利达 斯特拉 94 9s 2022 年
 
-      咸鱼 朝阳-50 2380
+        咸鱼 朝阳-50 2380
 
-- 美利达 斯特拉 95 8s R3000(SORA)
+-   美利达 斯特拉 95 8s R3000(SORA)
 
-      咸鱼 海淀-47 3000/东城-47 2980
+        咸鱼 海淀-47 3000/东城-47 2980
 
 ### 迪卡侬-公路
 
 门店多，车维护方便，没什么性价比
 
-- 迪卡侬 rc 100 7s 1699 前叉钢
-- 迪卡侬 rc 120 8s 2999
+-   迪卡侬 rc 100 7s 1699 前叉钢
+-   迪卡侬 rc 120 8s 2999
 
 ### 捷安特-公路
 
 入门车性价比一般，暂不考虑
 
-- 捷安特 ocr 5300
-- 捷安特 ocr 5500
-- 捷安特 ocr 5700
-- 捷安特 Speeder 7s shimano tourney 2498
-- 捷安特 Speeder D 8s shimano CLARIS 2998 8.9kg
+-   捷安特 ocr 5300
+-   捷安特 ocr 5500
+-   捷安特 ocr 5700
+-   捷安特 Speeder 7s shimano tourney 2498
+-   捷安特 Speeder D 8s shimano CLARIS 2998 8.9kg
 
 ## 平把公路
 
-美利达探索者300 9s 2200 12kg
-捷安特escape sl2 10kg 1900
-迪卡侬rideroad、speed
+美利达探索者 300 9s 2200 12kg
+捷安特 escape sl2 10kg 1900
+迪卡侬 rideroad、speed
 
 ## 山地车
 
@@ -129,40 +125,40 @@
 
 ### 美利达-山地
 
-兰博 780 10s 保养完好，无磕碰 1800入
+兰博 780 10s 保养完好，无磕碰 1800 入
 
-- 公爵 300 9s ALTUS(M2000)
+-   公爵 300 9s ALTUS(M2000)
 
-      咸鱼 600 - 1100
+        咸鱼 600 - 1100
 
-- 公爵 600 / 兰博 770 9s ALIVIO(M3100)
+-   公爵 600 / 兰博 770 9s ALIVIO(M3100)
 
-      咸鱼 1100 - 2000
+        咸鱼 1100 - 2000
 
 ### 迪卡侬-山地
 
-- RR 520 8s
+-   RR 520 8s
 
-      咸鱼 800 - 1600
+        咸鱼 800 - 1600
 
 ### 捷安特-山地
 
-- ATX 830 9s ACERA(M2000) 2598
+-   ATX 830 9s ACERA(M2000) 2598
 
-      咸鱼 1600 - 2000
+        咸鱼 1600 - 2000
 
-- ATX 835 9s ACERA(M2000)
+-   ATX 835 9s ACERA(M2000)
 
-      咸鱼 1550 - 2300
+        咸鱼 1550 - 2300
 
-- ATX 850 9s ACERA(M3000)
+-   ATX 850 9s ACERA(M3000)
 
-      咸鱼 1600 - 1800
+        咸鱼 1600 - 1800
 
-- XTC 750 9s ALIVIO(M3100) 3798
+-   XTC 750 9s ALIVIO(M3100) 3798
 
-      咸鱼 1500 - 2000
+        咸鱼 1500 - 2000
 
-- XTC 800 10s DEORE(M4100)
+-   XTC 800 10s DEORE(M4100)
 
-      咸鱼 2000 - 3600
+        咸鱼 2000 - 3600
